Code refactor for new Simulation env support.